// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Message > :props > :closeBtn is a function, () => VNode. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    <b
      class="t-message-close-content"
    >
      x
    </b>
  </span>
</div>
`;

exports[`Message > :props > :closeBtn is a string, equal "关闭". 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    关闭
  </span>
</div>
`;

exports[`Message > :props > :closeBtn is true, render default close button. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`Message > :props > :default is a function, () => <b>这是重要信息</b> 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <b>
    这是重要信息
  </b>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :default is a string, 这是普通信息 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  这是普通信息
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :icon is a function, () => MoreIcon 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M10.5 3H13.5V6H10.5V3ZM10.5 10.5H13.5V13.5H10.5V10.5ZM10.5 18H13.5V21H10.5V18Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :icon is false 1`] = `
<div
  class="t-message t-is-info"
>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 2`] = `
<div
  class="t-message t-is-success"
>
  <svg
    class="t-icon t-icon-check-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 3`] = `
<div
  class="t-message t-is-warning"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 4`] = `
<div
  class="t-message t-is-error"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 5`] = `
<div
  class="t-message t-is-question"
>
  <svg
    class="t-icon t-icon-help-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM11.8265 11.8902C12.2582 11.3593 12.8004 10.9159 13.2365 10.5723C13.7034 10.2045 14.0002 9.63718 14.0002 9C14.0002 7.89543 13.1048 7 12.0002 7C11.131 7 10.3888 7.5551 10.1138 8.33325L9.78055 9.27609L7.89487 8.6096L8.22811 7.66676C8.77675 6.11451 10.2571 5 12.0002 5C14.2094 5 16.0002 6.79086 16.0002 9C16.0002 10.2759 15.4018 11.4125 14.4742 12.1433C14.0426 12.4834 13.6573 12.8088 13.3783 13.1519C13.1038 13.4896 13.0002 13.762 13.0002 14V15.25H11.0002V14C11.0002 13.1334 11.3905 12.4265 11.8265 11.8902ZM11.0001 18.2539V16.25H13.004V18.2539H11.0001Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 6`] = `
<div
  class="t-message t-is-loading"
>
  <div
    class="t-loading--center t-size-m t-loading"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
  </div>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > pure message contains two classes 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > <slot> > <icon> 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M10.5 3H13.5V6H10.5V3ZM10.5 10.5H13.5V13.5H10.5V10.5ZM10.5 18H13.5V21H10.5V18Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;
